# easySkeletonApp

./: .gitignore  .project.pyproject  .project.qmlproject  README.md  pyproject.py  pyproject.toml
.github/workflows/: build.yml
Tools/Scripts/: Config.py  CreateTutorials.py  FreezeApp.py  Functions.py  MakeInstaller.py  MakeTutorials.py  RunApp.py  ZipArtifacts.py
docs/: index.html
easySkeletonApp/: main.py
easySkeletonApp/Gui/Components/: ApplicationWindow.qml
easySkeletonApp/Gui/Resources/Translations/: language_da.qm  language_da.ts  language_de.ts  language_es.qm  language_es.ts  language_fr.qm  language_it.qm  language_it.ts  language_ru.ts
easySkeletonApp/Logic/: PyQmlProxy.py
easyTemplateApp/: main.py
easyTemplateApp/Gui/Components/: ApplicationWindow.qml
easyTemplateApp/Gui/Pages/Home/: MainContent.qml
easyTemplateApp/Gui/Resources/Translations/: easyTemplate_fr.qm  easyTemplate_fr.ts  easyTemplate_ru.qm  easyTemplate_ru.ts  language_de.qm  language_fr.ts  language_pl.qm  language_pl.ts  language_pt.qm  language_pt.ts  language_ru.qm  language_sv.qm  language_sv.ts
tools/Scripts/: CreateTutorials.py  DeployFtp.py  FreezeApp.py  Functions.py  InstallApp.py  InstallerInstallScript.js  MakeInstaller.py  RunApp.py  TranslateApp.py  ZipArtifacts.py
